[tool.poetry]
name = "advent-of-code-2023"
version = "0.1.0"
description = ""
authors = ["mikolaj-skrzypczak <skrzypczak666@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
inflect = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
