[tool.poetry]
name = "advent-of-code-2023"
version = "0.1.0"
description = ""
authors = ["mikolaj-skrzypczak <skrzypczak666@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
inflect = "^7.0.0"
matplotlib = "^3.8.2"
levenshtein = "^0.23.0"
numpy = "^1.26.2"
networkx = "^3.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
